# rust-cube-eater-game

./: .gitignore  Makefile
c_test_game/: test_game.c
my_game_engine/: Cargo.toml  build.rs
my_game_engine/src/: lib.rs
opengl_wrapper_lib/: opengl_wrapper_lib.c
rust_test_game/: Cargo.toml  build.rs
rust_test_game/src/: game.rs  main.rs  sprite_loader.rs
