[package]
name = "rust_test_game"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust_test_game"
path = "src/main.rs"

[dependencies]
my_game_engine = { path = "../my_game_engine" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

